k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs-app
  namespace: default
  labels:
    app: docs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs-app
  template:
    metadata:
      labels:
        app: docs-app
    spec:
      containers:
      - name: docs-app
        image: youssefkejue/chorus-docs:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10
          periodSeconds: 30
        
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          timeoutSeconds: 5
          periodSeconds: 10
